deploynew.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodedeploy
  labels:
    app: nodenew
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodenew
  template:
    metadata:
      labels:
        app: nodenew
    spec:
      containers:
      - name: nodecontainer
        image: 13120107/nodebackimage
        ports:
        - containerPort: 5238
---
apiVersion: v1
kind: Service
metadata:
    name: node-service
spec:
    type: LoadBalancer
    selector:
      app: nodenew
    ports:
      - protocol: TCP
        port: 4284
        targetPort: 5238
