ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    #    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
          #  - host: "hw1.your_domain_name"
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: node-service
            port:
              number: 4284
